--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -15,4 +15,49 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <profiles>
+   <profile> 
+   <id>production</id>  
+   <activation>
+    <property>
+        <name>environment</name>
+        <value>prod</value>
+      </property>
+    </activation>       
+    <build>
+     <plugins> 
+      <plugin>
+       <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.16</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+        </plugin> </plugins>
+    </build> 
+</profile>
+<profile> 
+    <id>prod_Ubantu</id>
+    <activation>
+      <jdk>1.7.0_25</jdk>
+      <os>
+       <name>linux</name>
+       <family>unix</family> 
+       <arch>amd64</arch> 
+       <version>3.2.5-52-generic</version>
+       </os> 
+      </activation> 
+    <build>
+     <plugins> 
+      <plugin>
+       <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.16</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+        </plugin> </plugins>
+    </build> 
+</profile>
+</profiles>
 </project>
